fix: optimize layout on small screen

--- a/src/components/Connections.module.scss
+++ b/src/components/Connections.module.scss
@@ -69,4 +69,7 @@
 .sourceipContainer {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
